cambios en sass y pulido de html

--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -59,9 +59,9 @@
     <div class="card">
       <img src="../img/imagenes index/pexels-julia-m-cameron-4144294.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <p class="card-text">la clase esta dirigida para aquiellos principiante que quieren comenzar su nueoestilo de vida.
-              cuenta con cardio de 15 minutos de ejercicio, 35 minutos de actividad potenciando los niveles de resistencia,
-            fuerza y tonificacion superando los limites, llevando al crecimiento y terminamos la clase con estiramientos. </p>
+        <H3>TALLER DE ADMINISTACIÓN DE TIEMPO</H3>
+        <p class="card-text">El taller consiste en ensenar una nueva forma de administrar tu tiempo para que los dias ridan más de lo que podes pensar y <br>
+           no se pierdan en la procastinación. <br>Este taller va dorar 60hs distribuidas en una clase de 4 horas semanales, se evaluara mediante trabajos practicos y se dara un certificado de presencialidad.</p>
         <a href="pagos"><button>comprar</button></a>
       </div>
     </div>
@@ -69,10 +69,9 @@
     <div class="card">
       <img src="../img/cars/talleres/pexels-diva-plavalaguna-6150527.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <p class="card-text">La clase esta creada para aquellas personas que llevan un tiempo antes una vida
-              de ejercicio pero quieren volver a retomar, cuenta con 15 minutos de cardioy 30 minutos
-              de ejercicios, en total 45 minutos de puro movimiento fortaleciendo y volviendo a activar
-              cada musculo.</p>
+        <h3>TALLER DE HORATORÍA</h3>
+        <p class="card-text">Este taller esta pensado para aquellas personas que desean mejorar su horatoría. <br>
+        Se va a dar herramientas practicas que te van a desarrollar venciendo ese temor a enfrentarte a hablar en publico. <br> Este taller va dorar 60hs distribuidas en una clase de 4 horas semanales, se evaluara mediante trabajos practicos y se dara un certificado de presencialidad.</p>
         <a href="pagos"><button>comprar</button></a>
       </div>
     </div>
@@ -80,10 +79,9 @@
     <div class="card">
       <img src="../img/cars/talleres/pexels-mastercowley-897817 (1).jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <p class="card-text">Formado para aquellas personas que vienen co continuidad de entrenamiento
-              y decidenseguirlo online, cuenta con 10 minutos de calentamiento y 40 minutos de ejercicios,
-              en total 50 minutos continuado en crecimiento muscula, tonificando y superando limites, 
-              avanzando en tecnica, resistencia y terminanmos la clase con estiramientos.</p>
+        <H3>TALLER SOBRE LA DEPLECIÓN</H3>
+        <p class="card-text">El taller consiste en testimonios de personas que sufrieron depreción, las cuales con ayuda de especialista en la materia <br>
+        pudieron salir adelante, en este taller vamos a tener la participacion de psicologos y psicopedagogos para determinar cuales son aquellas areas en nuestra vida puedn estar generando ese mlestar hacia un prfundo sentido de vasio.</p>
         <a href="pagos"><button>comprar</button></a>
       </div>
     </div>
