cambios en sass y pulido de html

--- a/index.html
+++ b/index.html
@@ -23,17 +23,11 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contactos" >Contactos</a>
-        </li>
               <li class="nav-item">
           <a class="nav-link" href="./pages/planes.html">Planes de entrenamiento</a>
         </li>
               <li class="nav-item">
           <a class="nav-link" href="./pages/talleres.html">Talleres intregrales</a>
-        </li>
-              <li class="nav-item">
-          <a class="nav-link" href="#">conocernos más</a>
         </li>
       </ul>
     </div>
@@ -60,7 +54,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="10000">
-      <img src="./img/imagenes index/pexels-ivan-samkov-4164658.jpg" class="d-block w-100" alt="...">
+      <img src="./img/cars/etrenamientos/nivel medio.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>PLANES DE ENTRENAMIENTOS</h5>
         <p>Conoce nuestros planes.</p>
