entrega trabajo final proyecto final

--- a/pages/planes.html
+++ b/pages/planes.html
@@ -1,123 +1,146 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pump puro movimineto</title>
+
+    <!-- SEO -->
+    <title>Planes de entrenamiento en PUMP Gimnasio | San Nicolás</title>
+    <meta name="description" content="Elegí el plan de entrenamiento ideal para vos en PUMP Gimnasio San Nicolás: nivel inicial, medio o alto. Clases online y presenciales para mejorar tu salud física.">
+    <link rel="canonical" href="https://tudominio.com/pages/planes.html" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Planes de entrenamiento en PUMP Gimnasio | San Nicolás" />
+    <meta property="og:description" content="Conocé los planes de entrenamiento de PUMP Gimnasio: inicial, medio y avanzado. Adaptados a tu nivel físico." />
+    <meta property="og:image" content="https://tudominio.com/img/logopro.png" />
+    <meta property="og:url" content="https://tudominio.com/pages/planes.html" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Planes de entrenamiento en PUMP Gimnasio | San Nicolás" />
+    <meta name="twitter:description" content="Elegí tu plan en PUMP Gimnasio: inicial, medio o avanzado." />
+    <meta name="twitter:image" content="https://tudominio.com/img/logopro.png" />
+
     <link rel="stylesheet" href="../style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   </head>
 
   <body>
-      <header class="header-index">
-       <nav class="navbar navbar-expand-lg navbar-dark custom-bg">
-  <div class="container-fluid">
-   <div>
-    <a class="navbar-brand" href="index.html"><img src="../img/logopro.png" alt="logo pump puro moviento" class="nav-logo"></a>
-   </div>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-        </li>
-              <li class="nav-item">
-          <a class="nav-link" href="./planes.html ">Planes de entrenamiento</a>
-        </li>
-              <li class="nav-item">
-          <a class="nav-link" href="./talleres.html">Talleres intregrales</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+    <header class="header-index">
+      <nav class="navbar navbar-expand-lg navbar-dark custom-bg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">
+            <img src="../img/logopro.png" alt="Logo PUMP Gimnasio San Nicolás" class="nav-logo">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+              <li class="nav-item"><a class="nav-link active" href="./planes.html">Planes de entrenamiento</a></li>
+              <li class="nav-item"><a class="nav-link" href="./talleres.html">Talleres integrales</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
-<div id="img-fluid-mov">
-  <img src="../img/puro movimiento/negro-lindo.jpg" class="img-fluid" alt="pump">
-</div>
-
-
-<div class="cont-text-index">
-    <h1>Planes de entrenamientos</h1>
-    <p>¡elegi tu plan y comenza tu cambio fisico!
-    </p>
-</div>
-
-
-      </header>
-<main class="color-main">
-  <!-- Cards de Adultos -->
-  <section class="grupo-cards adultos">
-    <div class="card">
-      <img src="../img/imagenes index/pexels-ivan-samkov-4164658.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <p class="card-text">la clase esta dirigida para aquiellos principiante que quieren comenzar su nueoestilo de vida.
-              cuenta con cardio de 15 minutos de ejercicio, 35 minutos de actividad potenciando los niveles de resistencia,
-            fuerza y tonificacion superando los limites, llevando al crecimiento y terminamos la clase con estiramientos. </p>
-        <a href="pagos"><button>comprar</button></a>
+      <div id="img-fluid-mov">
+        <img src="../img/puro movimiento/negro-lindo.jpg" class="img-fluid" alt="Entrenamiento en PUMP Gimnasio San Nicolás" loading="lazy">
       </div>
-    </div>
 
-    <div class="card">
-      <img src="../img/cars/etrenamientos/nivel medio.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <p class="card-text">La clase esta creada para aquellas personas que llevan un tiempo antes una vida
-              de ejercicio pero quieren volver a retomar, cuenta con 15 minutos de cardioy 30 minutos
-              de ejercicios, en total 45 minutos de puro movimiento fortaleciendo y volviendo a activar
-              cada musculo.</p>
-        <a href="pagos"><button>comprar</button></a>
+      <div class="cont-text-index">
+        <h1>Planes de entrenamiento en PUMP</h1>
+        <p>Elegí tu plan y comenzá tu cambio físico hoy mismo.</p>
       </div>
-    </div>
+    </header>
 
-    <div class="card">
-      <img src="../img/cars/etrenamientos/nivel alto.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <p class="card-text">Formado para aquellas personas que vienen co continuidad de entrenamiento
-              y decidenseguirlo online, cuenta con 10 minutos de calentamiento y 40 minutos de ejercicios,
-              en total 50 minutos continuado en crecimiento muscula, tonificando y superando limites, 
-              avanzando en tecnica, resistencia y terminanmos la clase con estiramientos.</p>
-        <a href="pagos"><button>comprar</button></a>
+    <main class="color-main">
+      <!-- Cards de Adultos -->
+      <section class="grupo-cards adultos">
+        
+        <div class="card">
+          <img src="../img/imagenes index/pexels-ivan-samkov-4164658.jpg" class="card-img-top" alt="Plan de entrenamiento nivel inicial en PUMP" loading="lazy">
+          <div class="card-body">
+            <h2>Nivel inicial</h2>
+            <p class="card-text">Dirigido a quienes quieren comenzar su nuevo estilo de vida. Incluye cardio de 15 minutos, 35 minutos de ejercicios de resistencia, fuerza y tonificación, y estiramientos finales.</p>
+            <a href="pagos"><button>Comprar</button></a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="../img/cars/etrenamientos/nivel medio.jpg" class="card-img-top" alt="Plan de entrenamiento nivel medio en PUMP" loading="lazy">
+          <div class="card-body">
+            <h2>Nivel medio</h2>
+            <p class="card-text">Pensado para quienes ya tuvieron experiencia con el ejercicio y desean retomarlo. Incluye 15 minutos de cardio y 30 minutos de ejercicios intensivos.</p>
+            <a href="pagos"><button>Comprar</button></a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="../img/cars/etrenamientos/nivel alto.jpg" class="card-img-top" alt="Plan de entrenamiento nivel alto en PUMP" loading="lazy">
+          <div class="card-body">
+            <h2>Nivel alto</h2>
+            <p class="card-text">Diseñado para personas con continuidad en el entrenamiento. Incluye 10 minutos de calentamiento y 40 minutos de ejercicios intensivos, mejorando fuerza, resistencia y técnica.</p>
+            <a href="pagos"><button>Comprar</button></a>
+          </div>
+        </div>
+
+      </section>
+    </main>
+
+    <footer id="Contacto" class="footer-contenedor">
+      <div class="footer-redes">
+        <h2 class="titulos">Redes sociales</h2>
+        <div class="footer-iconos">
+          <a href="https://www.facebook.com/mela.pascal.5?locale=es_LA" target="_blank">
+            <img src="../img/redes/f8c8a9dd-3815-45b7-8180-80d501bc30cc.jpg" alt="Facebook Pump San Nicolás" width="30" loading="lazy">
+          </a>
+          <a href="https://www.instagram.com/pump.sn/" target="_blank">
+            <img src="../img/redes/5d392ada-e4b3-4a16-825e-09137b14d7d4.jpg" alt="Instagram Pump San Nicolás" width="30" loading="lazy">
+          </a>
+          <a href="https://wa.me" target="_blank">
+            <img src="../img/redes/3846955_2029459 - Editado.jpg" alt="WhatsApp Pump San Nicolás" width="30" loading="lazy">
+          </a>
+        </div>
       </div>
-    </div>
-  </section>
 
+      <div class="footer-formulario">
+        <h2 class="titulos">Dejanos tu comentario</h2>
+        <form id="footer-form">
+          <input type="text" placeholder="Nombre" required>
+          <input type="text" placeholder="Apellido" required>
+          <input type="email" placeholder="Correo" required>
+          <textarea rows="4" placeholder="Comentario o consulta" required></textarea>
+          <button type="submit">Enviar</button>
+        </form>
+      </div>
+    </footer>
 
-    
- <footer id="Contacto" class="footer-contenedor">
-  <!-- Columna izquierda: Redes sociales -->
-  <div class="footer-redes">
-    <h2 class="titulos">Redes sociales</h2>
-    <div class="footer-iconos">
-      <a href="https://www.facebook.com/mela.pascal.5?locale=es_LA" target="_blank">
-        <img src="../img/redes/f8c8a9dd-3815-45b7-8180-80d501bc30cc.jpg" alt="Facebook" width="30">
-      </a>
-      <a href="https://www.instagram.com/pump.sn/" target="_blank">
-        <img src="../img/redes/5d392ada-e4b3-4a16-825e-09137b14d7d4.jpg" alt="Instagram" width="30">
-      </a>
-      <a href="https://wa.me" target="_blank">
-        <img src="../img/redes/3846955_2029459 - Editado.jpg" alt="WhatsApp" width="30">
-      </a>
-    </div>
-  </div>
+    <!-- Datos estructurados JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Service",
+      "serviceType": "Planes de entrenamiento",
+      "provider": {
+        "@type": "HealthClub",
+        "name": "PUMP Gimnasio",
+        "url": "https://tudominio.com",
+        "image": "https://tudominio.com/img/logopro.png",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Av. Ejemplo 123",
+          "addressLocality": "San Nicolás",
+          "addressRegion": "Buenos Aires",
+          "postalCode": "2900",
+          "addressCountry": "AR"
+        }
+      }
+    }
+    </script>
 
- 
-  <div class="footer-formulario">
-    <h2 class="titulos">Dejanos tu comentario</h2>
-    <form>
-      <input type="text" placeholder="Nombre" required>
-      <input type="text" placeholder="Apellido" required>
-      <input type="email" placeholder="Correo" required>
-      <textarea rows="4" placeholder="Comentario o consulta" required></textarea>
-      <button type="submit">Enviar</button>
-    </form>
-  </div>
-</footer>
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   </body>
 </html>
