--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -1,122 +1,163 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pump puro movimineto</title>
+
+    <!-- SEO -->
+    <title>Talleres integrales en PUMP Gimnasio | Desarrollo y bienestar</title>
+    <meta name="description" content="Elegí talleres integrales en PUMP: administración del tiempo, oratoria y salud mental. Crecé en el área personal y profesional con nuestro acompañamiento.">
+    <link rel="canonical" href="https://tudominio.com/pages/talleres.html" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Talleres integrales en PUMP Gimnasio | Desarrollo y bienestar" />
+    <meta property="og:description" content="Participá en talleres de administración del tiempo, oratoria y salud mental en PUMP San Nicolás." />
+    <meta property="og:image" content="https://tudominio.com/img/logopro.png" />
+    <meta property="og:url" content="https://tudominio.com/pages/talleres.html" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Talleres integrales en PUMP Gimnasio" />
+    <meta name="twitter:description" content="Elegí talleres de oratoria, administración del tiempo y salud integral en PUMP San Nicolás." />
+    <meta name="twitter:image" content="https://tudominio.com/img/logopro.png" />
+
     <link rel="stylesheet" href="../style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   </head>
 
   <body>
-      <header class="header-index">
-       <nav class="navbar navbar-expand-lg navbar-dark custom-bg">
-  <div class="container-fluid">
-   <div>
-    <a class="navbar-brand" href="index.html"><img src="../img/logopro.png" alt="logo pump puro moviento" class="nav-logo"></a>
-   </div>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-        </li>
-              <li class="nav-item">
-          <a class="nav-link" href="./planes.html">Planes de entrenamiento</a>
-        </li>
-              <li class="nav-item">
-          <a class="nav-link" href="./talleres.html">Talleres intregrales</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+    <header class="header-index">
+      <nav class="navbar navbar-expand-lg navbar-dark custom-bg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">
+            <img src="../img/logopro.png" alt="Logo PUMP Gimnasio San Nicolás" class="nav-logo">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+              <li class="nav-item"><a class="nav-link" href="./planes.html">Planes de entrenamiento</a></li>
+              <li class="nav-item"><a class="nav-link active" href="./talleres.html">Talleres integrales</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
-<div id="img-fluid-mov">
-  <img src="../img/puro movimiento/negro-lindo.jpg" class="img-fluid" alt="pump">
-</div>
-
-
-<div class="cont-text-index">
-    <h1>TALLERES INTEGRALES</h1>
-    <p>¡elegi el area en que queres crecer, con nuestros talleres!
-    </p>
-</div>
-
-
-      </header>
-<main class="color-main">
-  <!-- Cards de Adultos -->
-  <section class="grupo-cards adultos">
-    <div class="card">
-      <img src="../img/imagenes index/pexels-julia-m-cameron-4144294.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <H3>TALLER DE ADMINISTACIÓN DE TIEMPO</H3>
-        <p class="card-text">El taller consiste en ensenar una nueva forma de administrar tu tiempo para que los dias ridan más de lo que podes pensar y <br>
-           no se pierdan en la procastinación. <br>Este taller va dorar 60hs distribuidas en una clase de 4 horas semanales, se evaluara mediante trabajos practicos y se dara un certificado de presencialidad.</p>
-        <a href="pagos"><button>comprar</button></a>
+      <div id="img-fluid-mov">
+        <img src="../img/puro movimiento/negro-lindo.jpg" class="img-fluid" alt="Entrenamiento y talleres en PUMP San Nicolás" loading="lazy">
       </div>
-    </div>
 
-    <div class="card">
-      <img src="../img/cars/talleres/pexels-diva-plavalaguna-6150527.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h3>TALLER DE HORATORÍA</h3>
-        <p class="card-text">Este taller esta pensado para aquellas personas que desean mejorar su horatoría. <br>
-        Se va a dar herramientas practicas que te van a desarrollar venciendo ese temor a enfrentarte a hablar en publico. <br> Este taller va dorar 60hs distribuidas en una clase de 4 horas semanales, se evaluara mediante trabajos practicos y se dara un certificado de presencialidad.</p>
-        <a href="pagos"><button>comprar</button></a>
+      <div class="cont-text-index">
+        <h1>Talleres integrales en PUMP</h1>
+        <p>Elegí el área en la que querés crecer con nuestros talleres de desarrollo y bienestar.</p>
       </div>
-    </div>
+    </header>
 
-    <div class="card">
-      <img src="../img/cars/talleres/pexels-mastercowley-897817 (1).jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <H3>TALLER SOBRE LA DEPLECIÓN</H3>
-        <p class="card-text">El taller consiste en testimonios de personas que sufrieron depreción, las cuales con ayuda de especialista en la materia <br>
-        pudieron salir adelante, en este taller vamos a tener la participacion de psicologos y psicopedagogos para determinar cuales son aquellas areas en nuestra vida puedn estar generando ese mlestar hacia un prfundo sentido de vasio.</p>
-        <a href="pagos"><button>comprar</button></a>
-      </div>
-    </div>
-  </section>
+    <main class="color-main">
+      <section class="grupo-cards adultos">
 
+        <div class="card">
+          <img src="../img/imagenes index/pexels-julia-m-cameron-4144294.jpg" class="card-img-top" alt="Taller de administración del tiempo en PUMP" loading="lazy">
+          <div class="card-body">
+            <h2>Taller de administración del tiempo</h2>
+            <p class="card-text">Aprendé nuevas formas de gestionar tu tiempo y evitar la procrastinación. Duración: 60 horas (clases de 4 horas semanales). Incluye evaluaciones prácticas y certificado de participación.</p>
+            <a href="pagos"><button>Comprar</button></a>
+          </div>
+        </div>
 
-</main>
+        <div class="card">
+          <img src="../img/cars/talleres/pexels-diva-plavalaguna-6150527.jpg" class="card-img-top" alt="Taller de oratoria en PUMP" loading="lazy">
+          <div class="card-body">
+            <h2>Taller de oratoria</h2>
+            <p class="card-text">Mejorá tu capacidad de hablar en público con herramientas prácticas. Superá el miedo escénico y desarrollá tu comunicación. Duración: 60 horas (clases de 4 horas semanales). Certificado de asistencia.</p>
+            <a href="pagos"><button>Comprar</button></a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="../img/cars/talleres/pexels-mastercowley-897817 (1).jpg" class="card-img-top" alt="Taller de salud mental y depresión en PUMP" loading="lazy">
+          <div class="card-body">
+            <h2>Taller sobre la depresión</h2>
+            <p class="card-text">Espacio con testimonios de superación, acompañados por psicólogos y especialistas en salud mental. Identificá áreas de mejora personal y encontrá apoyo profesional.</p>
+            <a href="pagos"><button>Comprar</button></a>
+          </div>
+        </div>
+
+      </section>
+    </main>
     
- <footer id="Contacto" class="footer-contenedor">
-  <!-- Columna izquierda: Redes sociales -->
-  <div class="footer-redes">
-    <h2 class="titulos">Redes sociales</h2>
-    <div class="footer-iconos">
-      <a href="https://www.facebook.com/mela.pascal.5?locale=es_LA" target="_blank">
-        <img src="./img/redes/f8c8a9dd-3815-45b7-8180-80d501bc30cc.jpg" alt="Facebook" width="30">
-      </a>
-      <a href="https://www.instagram.com/pump.sn/" target="_blank">
-        <img src="./img/redes/5d392ada-e4b3-4a16-825e-09137b14d7d4.jpg" alt="Instagram" width="30">
-      </a>
-      <a href="https://wa.me" target="_blank">
-        <img src="./img/redes/3846955_2029459 - Editado.jpg" alt="WhatsApp" width="30">
-      </a>
-    </div>
-  </div>
+    <footer id="Contacto" class="footer-contenedor">
+      <div class="footer-redes">
+        <h2 class="titulos">Redes sociales</h2>
+        <div class="footer-iconos">
+          <a href="https://www.facebook.com/mela.pascal.5?locale=es_LA" target="_blank">
+            <img src="../img/redes/f8c8a9dd-3815-45b7-8180-80d501bc30cc.jpg" alt="Facebook Pump San Nicolás" width="30" loading="lazy">
+          </a>
+          <a href="https://www.instagram.com/pump.sn/" target="_blank">
+            <img src="../img/redes/5d392ada-e4b3-4a16-825e-09137b14d7d4.jpg" alt="Instagram Pump San Nicolás" width="30" loading="lazy">
+          </a>
+          <a href="https://wa.me" target="_blank">
+            <img src="../img/redes/3846955_2029459 - Editado.jpg" alt="WhatsApp Pump San Nicolás" width="30" loading="lazy">
+          </a>
+        </div>
+      </div>
 
- 
-  <div class="footer-formulario">
-    <h2 class="titulos">Dejanos tu comentario</h2>
-    <form>
-      <input type="text" placeholder="Nombre" required>
-      <input type="text" placeholder="Apellido" required>
-      <input type="email" placeholder="Correo" required>
-      <textarea rows="4" placeholder="Comentario o consulta" required></textarea>
-      <button type="submit">Enviar</button>
-    </form>
-  </div>
-</footer>
+      <div class="footer-formulario">
+        <h2 class="titulos">Dejanos tu comentario</h2>
+        <form id="footer-form">
+          <input type="text" placeholder="Nombre" required>
+          <input type="text" placeholder="Apellido" required>
+          <input type="email" placeholder="Correo" required>
+          <textarea rows="4" placeholder="Comentario o consulta" required></textarea>
+          <button type="submit">Enviar</button>
+        </form>
+      </div>
+    </footer>
 
+    <!-- Datos estructurados JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Course",
+      "provider": {
+        "@type": "HealthClub",
+        "name": "PUMP Gimnasio",
+        "url": "https://tudominio.com",
+        "image": "https://tudominio.com/img/logopro.png",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Av. Ejemplo 123",
+          "addressLocality": "San Nicolás",
+          "addressRegion": "Buenos Aires",
+          "postalCode": "2900",
+          "addressCountry": "AR"
+        }
+      },
+      "name": "Talleres integrales en PUMP Gimnasio",
+      "description": "Cursos de desarrollo personal y salud integral: administración del tiempo, oratoria y depresión.",
+      "hasCourseInstance": [
+        {
+          "@type": "CourseInstance",
+          "name": "Taller de administración del tiempo",
+          "courseMode": "Presencial y Online"
+        },
+        {
+          "@type": "CourseInstance",
+          "name": "Taller de oratoria",
+          "courseMode": "Presencial y Online"
+        },
+        {
+          "@type": "CourseInstance",
+          "name": "Taller sobre la depresión",
+          "courseMode": "Presencial y Online"
+        }
+      ]
+    }
+    </script>
 
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   </body>
 </html>
