--- a/index.html
+++ b/index.html
@@ -1,140 +1,172 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pump puro movimineto</title>
+
+    <!-- SEO básico -->
+    <title>PUMP Gimnasio en San Nicolás | Entrenamiento físico, talleres y salud</title>
+    <meta name="description" content="PUMP es un gimnasio en San Nicolás que ofrece entrenamiento físico, talleres integrales de salud y acompañamiento profesional para tu bienestar físico, emocional y mental.">
+
+    <!-- Canonical -->
+    <link rel="canonical" href="https://tudominio.com/index.html" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="PUMP Gimnasio en San Nicolás | Entrenamiento y Talleres" />
+    <meta property="og:description" content="Entrená en PUMP: planes de entrenamiento, talleres de salud integral y acompañamiento profesional en San Nicolás." />
+    <meta property="og:image" content="https://tudominio.com/img/logopro.png" />
+    <meta property="og:url" content="https://tudominio.com/index.html" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="PUMP Gimnasio en San Nicolás | Entrenamiento y Talleres" />
+    <meta name="twitter:description" content="Entrená en PUMP: planes de entrenamiento, talleres de salud integral y acompañamiento profesional en San Nicolás." />
+    <meta name="twitter:image" content="https://tudominio.com/img/logopro.png" />
+
+    <!-- Styles -->
     <link rel="stylesheet" href="./style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   </head>
 
   <body>
-      <header class="header-index">
-       <nav class="navbar navbar-expand-lg navbar-dark custom-bg">
-  <div class="container-fluid">
-   <div>
-    <a class="navbar-brand" href="index.html"><img src="./img/logopro.png" alt="logo pump puro moviento" class="nav-logo"></a>
-   </div>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-              <li class="nav-item">
-          <a class="nav-link" href="./pages/planes.html">Planes de entrenamiento</a>
-        </li>
-              <li class="nav-item">
-          <a class="nav-link" href="./pages/talleres.html">Talleres intregrales</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+    <header class="header-index">
+      <nav class="navbar navbar-expand-lg navbar-dark custom-bg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">
+            <img src="./img/logopro.png" alt="Logo PUMP Gimnasio en San Nicolás" class="nav-logo">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item"><a class="nav-link active" href="#">Inicio</a></li>
+              <li class="nav-item"><a class="nav-link" href="./pages/planes.html">Planes de entrenamiento</a></li>
+              <li class="nav-item"><a class="nav-link" href="./pages/talleres.html">Talleres integrales</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
-<div id="img-fluid-mov">
-  <img src="./img/puro movimiento/negro-lindo.jpg" class="img-fluid" alt="pump">
-</div>
-
-<div  class="cont-text-index">
-  <h1> ¡BIENVENID@ A PUMP!</h1>
-  <p>lo que te brinda este esoacio es crecmiento fisico, emocinal y mental <br>
-  nos enfocamos en acompañarte profecionalmente para mejorar tu calidad de vida.</p>
-
-</div>
-
-<div id="carouselExampleDark" class="carousel carousel-dark slide">
-  <h2 class="titulos">conoce nuestras actividades</h2>
-  <div class="carousel-indicators">
-    
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-bs-interval="10000">
-      <img src="./img/cars/etrenamientos/nivel medio.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>PLANES DE ENTRENAMIENTOS</h5>
-        <p>Conoce nuestros planes.</p>
+      <div id="img-fluid-mov">
+        <img src="./img/puro movimiento/negro-lindo.jpg" class="img-fluid" alt="Entrenamiento físico en PUMP gimnasio San Nicolás" loading="lazy">
       </div>
-    </div>
 
-    <div class="carousel-item" data-bs-interval="2000">
-      <img src="./img/imagenes index/pexels-julia-m-cameron-4144294.jpg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h2>TALLERES DE SALUD</h2>
-        <p>Conce lostalleres de salud integral.</p>
+      <div class="cont-text-index">
+        <h1>¡Bienvenid@ a PUMP Gimnasio!</h1>
+        <p>Un espacio para tu crecimiento físico, emocional y mental. Te acompañamos profesionalmente para mejorar tu calidad de vida.</p>
       </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-      </header>
+
+      <div id="carouselExampleDark" class="carousel carousel-dark slide">
+        <h2 class="titulos">Conocé nuestras actividades</h2>
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <img src="./img/cars/etrenamientos/nivel medio.jpg" class="d-block w-100" alt="Planes de entrenamiento físico en PUMP" loading="lazy">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Planes de entrenamiento</h3>
+              <p>Conocé nuestros planes adaptados a tu nivel.</p>
+            </div>
+          </div>
+
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="./img/imagenes index/pexels-julia-m-cameron-4144294.jpg" class="d-block w-100" alt="Talleres de salud integral en PUMP" loading="lazy">
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Talleres de salud</h3>
+              <p>Descubrí los talleres de salud integral.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Anterior</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Siguiente</span>
+        </button>
+      </div>
+    </header>
 
     <main class="color-main">
+      <section>
+        <h2 id="conocer-index">Conocenos más</h2>
+      </section>
 
-      <section><h2 id="conocer-index">conocenos más</h2></section>
-              <section class="cont-text-index">
-            <h3 >¿Qué es PUMP?</h3>
-             <P>PUMP fue formado el 1 de Febrero del 2022 en esa fecha abrio sus puertas,<br> lo que significa 
-                su nombre es Poder, Unción, Movimiento, Precursor. Este espacio es fundado desde una base 
-                cristiana, creemos en el poder de DIOS y que el es el encargado de sostenernos. <br>
-             </P>
-    </section>
+      <section class="cont-text-index">
+        <h3>¿Qué es PUMP?</h3>
+        <p>PUMP nació el 1 de febrero de 2022. Su nombre significa Poder, Unción, Movimiento, Precursor. Fundado en base cristiana, creemos en el poder de Dios como nuestro sostén.</p>
+      </section>
 
-        <section class="cont-text-index">
-             <h3>¿En que consiste?</h3>
-             <P>
-                contamos con clases grabadas con distintos costos para la comodidadde tu billetera, <br>
-                las clases se enfocan en mejorar tu salud fisica y ademas contamos con talleres  <br>
-                para tu saluad mental y espiritual todo esta dividido por edadesy categorias para una <br>
-                mejor elección de crecimiento en el area que desees pero por sobre todo el fisico. <br>
-             </P>
-     </section>
+      <section class="cont-text-index">
+        <h3>¿En qué consiste?</h3>
+        <p>Ofrecemos clases grabadas a distintos precios para tu comodidad. También brindamos talleres para tu salud física, mental y espiritual. Todo está dividido por edad y categoría para que elijas lo que mejor se adapte a vos.</p>
+      </section>
     </main>
 
- <footer id="Contacto" class="footer-contenedor">
-  <!-- Columna izquierda: Redes sociales -->
-  <div class="footer-redes">
-    <h2 class="titulos">Redes sociales</h2>
-    <div class="footer-iconos">
-      <a href="https://www.facebook.com/mela.pascal.5?locale=es_LA" target="_blank">
-        <img src="./img/redes/f8c8a9dd-3815-45b7-8180-80d501bc30cc.jpg" alt="Facebook" width="30">
-      </a>
-      <a href="https://www.instagram.com/pump.sn/" target="_blank">
-        <img src="./img/redes/5d392ada-e4b3-4a16-825e-09137b14d7d4.jpg" alt="Instagram" width="30">
-      </a>
-      <a href="https://wa.me" target="_blank">
-        <img src="./img/redes/3846955_2029459 - Editado.jpg" alt="WhatsApp" width="30">
-      </a>
-    </div>
-  </div>
+    <footer id="Contacto" class="footer-contenedor">
+      <div class="footer-redes">
+        <h2 class="titulos">Redes sociales</h2>
+        <div class="footer-iconos">
+          <a href="https://www.facebook.com/mela.pascal.5?locale=es_LA" target="_blank">
+            <img src="./img/redes/f8c8a9dd-3815-45b7-8180-80d501bc30cc.jpg" alt="Facebook Pump San Nicolás" width="30" loading="lazy">
+          </a>
+          <a href="https://www.instagram.com/pump.sn/" target="_blank">
+            <img src="./img/redes/5d392ada-e4b3-4a16-825e-09137b14d7d4.jpg" alt="Instagram Pump San Nicolás" width="30" loading="lazy">
+          </a>
+          <a href="https://wa.me" target="_blank">
+            <img src="./img/redes/3846955_2029459 - Editado.jpg" alt="WhatsApp Pump San Nicolás" width="30" loading="lazy">
+          </a>
+        </div>
+      </div>
 
- 
-  <div class="footer-formulario">
-    <h2 class="titulos">Dejanos tu comentario</h2>
-    <form>
-      <input type="text" placeholder="Nombre" required>
-      <input type="text" placeholder="Apellido" required>
-      <input type="email" placeholder="Correo" required>
-      <textarea rows="4" placeholder="Comentario o consulta" required></textarea>
-      <button type="submit">Enviar</button>
-    </form>
-  </div>
-</footer>
+      <div class="footer-formulario">
+        <h2 class="titulos">Dejanos tu comentario</h2>
+        <form id="footer-form">
+          <input type="text" placeholder="Nombre" required>
+          <input type="text" placeholder="Apellido" required>
+          <input type="email" placeholder="Correo" required>
+          <textarea rows="4" placeholder="Comentario o consulta" required></textarea>
+          <button type="submit">Enviar</button>
+        </form>
+      </div>
+    </footer>
 
+    <!-- Datos estructurados JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "HealthClub",
+      "name": "PUMP Gimnasio",
+      "image": "https://tudominio.com/img/logopro.png",
+      "url": "https://tudominio.com",
+      "telephone": "+54-11-1234-5678",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Av. Ejemplo 123",
+        "addressLocality": "San Nicolás",
+        "addressRegion": "Buenos Aires",
+        "postalCode": "2900",
+        "addressCountry": "AR"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": -33.33,
+        "longitude": -60.22
+      },
+      "openingHoursSpecification": [{
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday"],
+        "opens": "07:00",
+        "closes": "22:00"
+      }]
+    }
+    </script>
 
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   </body>
 </html>
